[MediaSession] Don't reset metadata and actions when the session goes uncontrollable

When switching media element src, MediaSession goes uncontrollable and
then controllable. The current MediaSession routing algorithm resets
metadata and controls when the session goes uncontrollable. However this
resetting is unnecessary but will cause notification flickering as well.
This CL removes the unnecessary reset signal.

BUG=678945

Review-Url: https://codereview.chromium.org/2612293003
Cr-Commit-Position: refs/heads/master@{#442708}

Former-commit-id: f64ef58c0294ed6ad7468c9ca7155a6e4430d8f1